--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "@types/react-dom": "^18.0.0",
     "@types/react-icons": "^3.0.0",
     "@types/react-router-dom": "^5.3.3",
+    "@types/react-swipeable-views": "^0.13.2",
+    "@types/react-swipeable-views-core": "^0.13.0",
     "@types/styled-components": "^5.1.26",
     "antd": "^5.6.4",
     "react": "^18.2.0",
@@ -24,6 +26,7 @@
     "react-icons": "^4.10.1",
     "react-router-dom": "^6.14.1",
     "react-scripts": "5.0.1",
+    "react-swipeable": "^7.0.1",
     "styled-components": "^6.0.2",
     "typescript": "^4.4.2",
     "web-vitals": "^2.1.0"
