--- a/package.json
+++ b/package.json
@@ -8,6 +8,11 @@
     "@mui/icons-material": "^5.13.7",
     "@mui/lab": "^5.0.0-alpha.135",
     "@mui/material": "^5.13.7",
+    "@syncfusion/ej2-calendars": "^22.1.36",
+    "@syncfusion/ej2-dropdowns": "^22.1.37",
+    "@syncfusion/ej2-react-calendars": "^22.1.36",
+    "@syncfusion/ej2-react-dropdowns": "^22.1.37",
+    "@syncfusion/ej2-react-navigations": "^22.1.36",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^13.2.1",
@@ -22,6 +27,7 @@
     "@types/styled-components": "^5.1.26",
     "antd": "^5.6.4",
     "react": "^18.2.0",
+    "react-closeable-tabs": "^1.1.5",
     "react-dom": "^18.2.0",
     "react-icons": "^4.10.1",
     "react-router-dom": "^6.14.1",
