--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@mui/icons-material": "^5.13.7",
     "@mui/lab": "^5.0.0-alpha.135",
     "@mui/material": "^5.13.7",
+    "@mui/styles": "^5.14.0",
     "@syncfusion/ej2-calendars": "^22.1.36",
     "@syncfusion/ej2-dropdowns": "^22.1.37",
     "@syncfusion/ej2-react-calendars": "^22.1.36",
@@ -26,7 +27,9 @@
     "@types/react-swipeable-views-core": "^0.13.0",
     "@types/styled-components": "^5.1.26",
     "antd": "^5.6.4",
+    "axios": "^1.4.0",
     "react": "^18.2.0",
+    "react-beautiful-dnd": "^13.1.1",
     "react-closeable-tabs": "^1.1.5",
     "react-dom": "^18.2.0",
     "react-icons": "^4.10.1",
@@ -60,5 +63,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/react-beautiful-dnd": "^13.1.4"
   }
 }
