Edit components page added

--- a/package.json
+++ b/package.json
@@ -6,9 +6,12 @@
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.13.7",
+    "@mui/joy": "^5.0.0-alpha.88",
     "@mui/lab": "^5.0.0-alpha.135",
     "@mui/material": "^5.13.7",
     "@mui/styles": "^5.14.0",
+    "@mui/x-data-grid": "^5.0.0-beta.2",
+    "@mui/x-data-grid-pro": "^6.10.1",
     "@syncfusion/ej2-calendars": "^22.1.36",
     "@syncfusion/ej2-dropdowns": "^22.1.37",
     "@syncfusion/ej2-react-calendars": "^22.1.36",
