Draggable Input added and users can drop ınput to the grids.

--- a/package.json
+++ b/package.json
@@ -35,6 +35,8 @@
     "react": "^18.2.0",
     "react-beautiful-dnd": "^13.1.1",
     "react-closeable-tabs": "^1.1.5",
+    "react-dnd": "^16.0.1",
+    "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^18.2.0",
     "react-icons": "^4.10.1",
     "react-resizable": "^3.0.5",
