--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
     "@types/styled-components": "^5.1.26",
     "antd": "^5.6.4",
     "axios": "^1.4.0",
+    "fs": "^0.0.1-security",
+    "fs-extra": "^11.1.1",
     "react": "^18.2.0",
     "react-beautiful-dnd": "^13.1.1",
     "react-closeable-tabs": "^1.1.5",
@@ -44,6 +46,7 @@
     "react-scripts": "5.0.1",
     "react-swipeable": "^7.0.1",
     "styled-components": "^6.0.2",
+    "tsc": "^2.0.4",
     "typescript": "^4.4.2",
     "web-vitals": "^2.1.0"
   },
